@@ -2,46 +2,46 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'org.greenrobot.greendao'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.jakewharton.butterknife'
+
 
 // gradle BuildVariants
 //Build Variants = Product Flavor + Build Type
 android {
+    namespace "com.openapi.ks.chatfree"
     compileSdk 34
 //    buildTools "29.0.2"
     ndkVersion "23.1.7779620"
     defaultConfig {
-        applicationId "com.openapi.ks.chat"
+        applicationId "com.openapi.ks.chatfree"
         minSdk 28
         targetSdk 33
-        versionCode 1001000012
-        versionName "1.1.1.2"
+        versionCode 1001000017
+        versionName "1.1.1.7"
         // Enabling multidex support.
         multiDexEnabled true
         flavorDimensions "versionCode"
         renderscriptTargetApi 18
         renderscriptSupportModeEnabled true
+
+    }
+    tasks.withType(JavaCompile).configureEach{
+        options.fork = true
+        options.forkOptions.jvmArgs +=[
+                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
-//    compileOptions {
-//        sourceCompatibility JavaVersion.VERSION_11
-//        targetCompatibility JavaVersion.VERSION_11
-//    }
-//    kotlinOptions {
-//        jvmTarget = '11'
-//    }
-//
+    kotlinOptions {
+        jvmTarget = "17"
+    }
     buildFeatures {
         viewBinding true
     }
-//    buildFeatures {
-//        compose true
-//    }
-//    composeOptions {
-//        kotlinCompilerExtensionVersion = "${rootProject.ext.kotlin_version}"
-//    }
     dexOptions {
 //        incremental true
         preDexLibraries true
@@ -49,7 +49,11 @@ android {
     }
     lintOptions {
         disable 'InvalidPackage'
+        checkReleaseBuilds false
+        abortOnError false
     }
+
+
     packagingOptions {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/maven/com.squareup.okhttp/okhttp/pom.xml'
@@ -72,14 +76,14 @@ android {
         }
     }
     buildTypes {
-//        debug {
-//            minifyEnabled false
-//            debuggable true
-//            zipAlignEnabled false // Zipalign优化
-//            shrinkResources false
-//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-//            signingConfig signingConfigs.config
-//        }
+        debug {
+            minifyEnabled false
+            debuggable true
+            zipAlignEnabled false // Zipalign优化
+            shrinkResources false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
+        }
         release {
             minifyEnabled true
             debuggable false
@@ -94,11 +98,14 @@ android {
             manifestPlaceholders = [CHANNEL_VALUE: "GOOGLEMARKET", AD_CHANNEL_VALUE: "GOOGLEMARKET"]
         }
     }
+//    tasks.named('compileDebugKotlin') {
+//        dependsOn(':app:greendao')
+//    }
 }
 greendao {
-    schemaVersion 5
-    daoPackage 'com.ping.greendao.gen'
-    targetGenDir 'src/main/java'
+    schemaVersion 6
+//    daoPackage 'com.ping.greendao.gen'
+//    targetGenDir 'src/main/java'
 }
 configurations {
     implementation.exclude module: 'gson' //Remove duplicate dependencies： gson
@@ -108,21 +115,22 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.aar'])
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    //不能升级，会影响kotlin版本
     implementation "androidx.appcompat:appcompat:1.6.1"
     implementation "androidx.legacy:legacy-support-v13:1.0.0"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
     implementation "androidx.palette:palette:1.0.0"
     implementation "androidx.recyclerview:recyclerview"
     implementation "androidx.cardview:cardview"
-    //material 版本不能动，会报错
+    //material 版本不能动，会影响kotlin版本
     implementation 'com.google.android.material:material:1.4.0'
-    annotationProcessor 'androidx.annotation:annotation:1.7.1'
+    annotationProcessor 'androidx.annotation:annotation:1.8.0'
     implementation "androidx.percentlayout:percentlayout:1.0.0"
-    implementation 'androidx.multidex:multidex:2.0.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
 //    implementation 'androidx.multidex:multidex:2.0.1'
-
+    //不能升级，影响kotlin版本
     implementation 'com.google.android.gms:play-services-ads:22.0.0'
-    implementation 'jp.wasabeef:glide-transformations:2.0.2'
+    implementation 'jp.wasabeef:glide-transformations:4.3.0'
 
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
@@ -133,8 +141,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.9.0'
 
 
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
-    implementation 'com.jakewharton:butterknife:10.2.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
+    implementation 'com.jakewharton:butterknife:10.2.3'
     implementation 'com.jakewharton:disklrucache:2.0.2'
 //    implementation 'com.github.JakeWharton:ViewPagerIndicator:2.4.1'
 
@@ -154,11 +162,8 @@ dependencies {
     //和 gsy 冲突了，不能升级版本，不兼容
     implementation 'com.google.android.exoplayer:exoplayer:2.12.1'
 
-//    implementation project(path: ':vitamio')
-    implementation project(path: ':vosk_models')
     implementation 'io.reactivex:rxjava:1.1.9'
     implementation 'io.reactivex:rxandroid:1.2.1'
-
 
     implementation 'com.github.CarGuo.GSYVideoPlayer:GSYVideoPlayer:v8.4.0-release-jitpack'
     //是否需要AliPlayer模式
@@ -178,7 +183,6 @@ dependencies {
     //工具集
     //Gson
     implementation 'com.google.code.gson:gson:2.10.1'
-
 // 输入框，语音+图片
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
     // PictureSelector basic (Necessary)
@@ -194,11 +198,7 @@ dependencies {
 //    implementation 'com.alphacephei:vosk-android:0.3.47@aar'
 //    implementation 'net.java.dev.jna:jna:5.13.0@aar'
 //asr bytedance
-//    implementation 'com.bytedance.speechengine:speechengine_asr_tob:1.1.6'
-//    implementation 'com.bytedance.speechengine:speechengine_tts_tob:5.4.7'
     implementation 'com.bytedance.speechengine:speechengine_tob:0.0.3'
-
-
     implementation 'pub.devrel:easypermissions:3.0.0'
 
 }
